--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,5 +11,7 @@
       "allowJs": true,
       "allowSyntheticDefaultImports": true,
       "moduleResolution": "Node"
-    }
+      
+    },
+    "include": ["src", "./declaration.d.ts"]
 }
