--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "@mui/styles": "^5.11.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.7.0"
+    "react-router-dom": "^6.7.0",
+    "request": "2.79.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
