--- a/package.json
+++ b/package.json
@@ -26,8 +26,10 @@
     "@mui/material": "^5.11.6",
     "@mui/styles": "^5.11.7",
     "react": "^18.2.0",
+    "react-code-blocks": "^0.0.9-0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.7.0",
+    "react-syntax-highlighter": "^15.5.0",
     "request": "2.79.0"
   },
   "devDependencies": {
