--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "sass": "^1.57.1",
     "sass-loader": "^13.2.0",
     "style-loader": "^3.3.1",
+    "terser-webpack-plugin": "^5.3.10",
     "ts-loader": "^9.4.2",
     "typescript": "^4.9.4",
     "url-loader": "^4.1.1",
