--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "compilerOptions": {
-      "outDir": "./dist/",
+      "outDir": "/dist",
       "lib": ["es6", "dom"],
       "noImplicitAny": true,
       "noImplicitThis": true,
